# smart_traffic_violation_pattern_detector

./: LICENSE
Traffic_Detection/: ARCHITECTURE.md  CHANGES.md  FINAL_SUMMARY.txt  INDEX.md  QUICKSTART.txt  README.md  README_REDESIGN.md  app.py  pyproject.toml  requirements.txt  traffic_data.csv
Traffic_Detection/server/: index.ts
