[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "streamlit-folium>=0.25.3",
]
